[DELIVERS BUGFIX #60097106] Fixes wrapping issue with students/groups selector in coursemap

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -2281,12 +2281,13 @@ a.table--heading {
     @extend %shaded-bottom;
     height: 4.8rem;
     background-color: $grayDark;
-    padding: 1.4rem 1.6rem;
+    padding: 1.4rem 0 1.4rem 1.6rem;
     position: relative;
     .light-radio-label {
       width: auto;
+      padding-left: 2.2rem;
       &:first-child {
-        padding-right: 1.5rem;
+        padding-right: 1.3rem;
       }
     }
     .highlightable & {
